--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
-baseURL               = "https://nav.xazz.top/"
+baseURL               = "https://518855.xyz/"
 languageCode          = "zh-CN"
-title                 = "sunshine的导航"
+title                 = "AiEDU | MJJ导航"
 theme                 = "WebStack-Hugo"
 preserveTaxonomyNames = true
 disablePathToLower    = true
@@ -9,21 +9,21 @@ publishDir            = "docs"					# 站点静态文件保存目录
 
 
 [params]
-    author        = "ikirito"
-    description   = "sunshine | Hugo WebStack BY ikirito"
-    upload        = "https://wj.qq.com/s2/12053817/3264/"  # 左侧导航栏的"网站提交"
-    about         = "https://doks.xazz.top/"	# 左侧导航栏的"关于导航"页面(./about)
-    repository    = "https://github.com/sunshine504"  
-    enablePreLoad = false					# 网站完全打开前预加载动画
-    textPreLoad   = "sunshine"				# 预加载的动画文字, 只有当enablePreLoad=true时生效
+    author        = "AiEDU"
+    description   = "NAV | STATIC MJJ BY AiEDU"
+    upload        = "https://518855.xyz/"  # 左侧导航栏的"网站提交"
+    about         = "https://518855.xyz/"	# 左侧导航栏的"关于导航"页面(./about)
+    repository    = "https://github.com/88899"
+    enablePreLoad = true					# 网站完全打开前预加载动画
+    textPreLoad   = "AiEDU"				# 预加载的动画文字, 只有当enablePreLoad=true时生效
     expandSidebar = true					# 默认展开左侧边导航栏
     logosPath     = "assets/images/logos"			# 网站每个导航地址logo存放地址
     defaultLogo   = "assets/images/logos/default.webp"		# logo图片资源不存在或者错误时, 默认显示的logo; 该参数如为空,将会一直加载对应的logo,直至成功
     nightMode     = false					# 默认站点为深色(夜间)模式
     yiyan         = true                         		# 默认启用一言服务
 
-[params.seo]    
-    baiduhmid     = 'efccc04cb44fc49faddac5876180b369'		# 百度统计 hm.src 的 ID
+[params.seo]
+    baiduhmid     = '252f9700e4c1ad32c2647eb839ef71e6'		# 百度统计 hm.src 的 ID
     baiduSiteVer  = 'codeva-cCAOSG8MBO'				# 百度HTML标签验证(baidu-site-verification)
     tj51laid        = ''                        		# 51.LA 网站统计
     tj51lack        = ''
@@ -39,9 +39,9 @@ publishDir            = "docs"					# 站点静态文件保存目录
     logoExpandDark    = "assets/images/wuzi.png"               # 扩展状态下的深色 logo
     logoCollapseLight = "assets/images/favicon2.png"           # 收起状态下的浅色 logo
     logoCollapseDark  = "assets/images/favicon2.png"           # 收起状态下的深色 logo
-    
+
 [markup.goldmark.renderer]
     unsafe = true
 
 [params.footer]
-    copyright = '本站内容源自互联网，如有内容侵犯权益，请联系站长删除相关内容，联系邮箱：mail@xazz.top <br/><br/><span id="RunTime" style="color:#FC4E27;letter-spacing:2px"></span><br/><br/>&copy; 2023 - {year} By [WebStack-Hugo](https://github.com/shenweiyan/WebStack-Hugo) | [ikirito-Github](https://github.com/i-kirito) | [备案号](https://nav.xazz.top)<br/>'
+    copyright = '本站内容源自互联网，如有内容侵犯权益，请联系站长删除相关内容，联系邮箱：aiedu985@gmail.com <br/><br/><span id="RunTime" style="color:#FC4E27;letter-spacing:2px"></span><br/><br/>&copy; 2025 - {year} By [AiEDU](https://github.com/88899) | [vercel-hugo](https://github.com/88899/vercel-hugo) <br/>'
