--- a/data/friendlinks.yml
+++ b/data/friendlinks.yml
@@ -1,6 +1,6 @@
-- title: 小A猪崽
-  url: https://nav.xazz.top/
+- title: AiEDU
+  url: https://518855.xyz/
   description: 网址导航
 - title: 个人博客
-  url: http://ikirito.me/
+  url: https://857880.xyz/
   description: 个人博客
