--- a/data/headers.yml
+++ b/data/headers.yml
@@ -4,11 +4,11 @@
 
 - item: 作者
   icon: fa fa-user-secret
-  link: https://ikirito.me/about
+  link: https://985188.xyz/contacts/
 
 - item: 博客
   icon: fa fa-blog
-  link: https://ikirito.me
+  link: https://857880.xyz/
 
 - item: 关于
   icon: fa fa-cog
@@ -16,10 +16,10 @@
   list:
     - name: 源码
       icon: fab fa-github-alt
-      link: "https://github.com/i-kirito/nav.github.io"
+      link: "https://github.com/88899/vercel-hugo"
     - name: 图标
       icon: fab fa-font-awesome
       link: "https://fontawesome.com/"
-    - name: 文档
-      icon: fas fa-file-alt
-      link: "https://doks.xazz.top/"
+    # - name: 文档
+    #   icon: fas fa-file-alt
+    #   link: "https://doks.xazz.top/"
