--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -3,7 +3,7 @@
   icon: far fa-star
   links:
     - title: YXVM
-      logo: hyxvm.ico
+      logo: yxvm.ico
       url: https://yxvm.com/aff.php?aff=660
       description: The better way to build your project with YxVM.
     - title: Alice
