--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -42,10 +42,10 @@
       logo: Thingiverse.ico
       url: https://www.thingiverse.com/
       description: Thingiverse
-    - title: Printables
-      logo: Printables.ico
-      url: https://www.printables.com/
-      description: Printables
+    - title: LOGO在线设计
+      logo: photoshop.png
+      url: https://www.uugai.com/
+      description: 免费的LOGO在线设计制作工具
     - title: 修图全集
       logo: Lucky.png
       url: https://www.iloveimg.com/zh-cn
