--- a/config.toml
+++ b/config.toml
@@ -14,7 +14,7 @@ publishDir            = "docs"					# 站点静态文件保存目录
     upload        = "https://518855.xyz/"  # 左侧导航栏的"网站提交"
     about         = "https://985188.xyz/contacts/"	# 左侧导航栏的"关于导航"页面(./about)
     repository    = "https://github.com/88899"
-    enablePreLoad = true					# 网站完全打开前预加载动画
+    enablePreLoad = false					# 网站完全打开前预加载动画
     textPreLoad   = "AiEDU"				# 预加载的动画文字, 只有当enablePreLoad=true时生效
     expandSidebar = true					# 默认展开左侧边导航栏
     logosPath     = "assets/images/logos"			# 网站每个导航地址logo存放地址
