--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -82,45 +82,6 @@
 - taxonomy: 常用工具
   icon: fas fa-laptop-code fa-lg
   list:
-    - term: 域名注册
-      links:
-        - title: NameSilo
-          logo: namesilo.ico
-          url: https://www.namesilo.com/
-          description: 域名注册商，提供域名注册、SSL证书等服务
-        - title: Namecheap
-          logo: namecheap.ico
-          url: https://www.namecheap.com/
-          description: 域名注册商，提供域名注册、SSL证书等服务
-        - title: GoDaddy
-          logo: godaddy.png
-          url: https://www.godaddy.com/
-          description: 全球最大的域名注册商之一，提供域名注册、主机等服务
-        - title: 阿里云域名
-          logo: 阿里云.ico
-          url: https://wanwang.aliyun.com/
-          description: 阿里云的域名注册服务
-        - title: 腾讯云域名
-          logo: 腾讯云.ico
-          url: https://cloud.tencent.com/product/domain
-          description: 腾讯云的域名注册服务
-        - title: PP.ua
-          logo: nic.png
-          url: https://nic.ua/
-          description: 免费二级域名，按年续期
-        - title: Eu.org
-          logo: euorg.ico
-          url: https://nic.eu.org/
-          description: 永久免费二级域名
-        - title: Nyc.mn
-          logo: nycmn.png
-          url: https://dot.nyc.mn/
-          description: 永久免费二级域名，仅限纽约家宽申请
-        - title: Us.kg
-          logo: uskg.jpg
-          url: https://domain.digitalplat.org/
-          description: 永久免费二级域名，半年续期
-
     - term: 网络工具
       links:
         - title: iTdog
@@ -171,6 +132,52 @@
           logo: mcwy.ico
           url: https://sub.mcwy.cloud/
           description: 订阅链接转换，支持多种格式转换
+        - title: Warp+
+          logo: warp.png
+          url: https://ip125.com/warp/
+          description: 获取Cloudflare的Warp+key
+        - title: UUID
+          logo: uuidgenerator.png
+          url: https://www.uuidgenerator.net/
+          description: UUID生产工具
+    - term: 域名注册
+      links:
+        - title: NameSilo
+          logo: namesilo.ico
+          url: https://www.namesilo.com/
+          description: 域名注册商，提供域名注册、SSL证书等服务
+        - title: Namecheap
+          logo: namecheap.ico
+          url: https://www.namecheap.com/
+          description: 域名注册商，提供域名注册、SSL证书等服务
+        - title: GoDaddy
+          logo: godaddy.png
+          url: https://www.godaddy.com/
+          description: 全球最大的域名注册商之一，提供域名注册、主机等服务
+        - title: 阿里云域名
+          logo: 阿里云.ico
+          url: https://wanwang.aliyun.com/
+          description: 阿里云的域名注册服务
+        - title: 腾讯云域名
+          logo: 腾讯云.ico
+          url: https://cloud.tencent.com/product/domain
+          description: 腾讯云的域名注册服务
+        - title: PP.ua
+          logo: nic.png
+          url: https://nic.ua/
+          description: 免费二级域名，按年续期
+        - title: Eu.org
+          logo: euorg.ico
+          url: https://nic.eu.org/
+          description: 永久免费二级域名
+        - title: Nyc.mn
+          logo: nycmn.png
+          url: https://dot.nyc.mn/
+          description: 永久免费二级域名，仅限纽约家宽申请
+        - title: Us.kg
+          logo: uskg.jpg
+          url: https://domain.digitalplat.org/
+          description: 永久免费二级域名，半年续期
 
     - term: 办公必备
       links:
@@ -190,10 +197,6 @@
           logo: bejson.ico
           url: https://www.bejson.com/
           description: JSON工具,格式互转
-        - title: UUID
-          logo: uuidgenerator.png
-          url: https://www.uuidgenerator.net/
-          description: UUID生产工具
         - title: 清华大学开源
           logo: 清华开源.ico
           url: https://mirror.tuna.tsinghua.edu.cn/
@@ -202,10 +205,6 @@
           logo: 3dm.ico
           url: http://www.jsons.cn/urlencode/
           description: Json编解码工具
-        - title: Warp+
-          logo: warp.png
-          url: https://ip125.com/warp/
-          description: 获取Cloudflare的Warp+key
         - title: Paperpass
           logo: paperpass.ico
           url: https://www.paperpass.com/
@@ -226,6 +225,18 @@
           logo: 语雀.jpg
           url: http://web-tools.phalapi.net/
           description: Web Tools开发者在线工具精品
+        - title: 草料二维码
+          logo: caoliao.ico
+          url: https://cli.im/
+          description: 在线生成二维码的工具
+        - title: 速写板
+          logo: suxieban.ico
+          url: https://www.suxieban.com/#
+          description: 在线白板，无需登录即可随手绘画
+        - title: 在线绘图
+          logo: diagrams.png
+          url: https://app.diagrams.net/
+          description: 在线绘图，无需登录即可绘制流程图、思维导图等
 
 - taxonomy: 数据资源
   icon: fas fa-film fa-lg
