--- a/themes/WebStack-Hugo/exampleSite/config.toml
+++ b/themes/WebStack-Hugo/exampleSite/config.toml
@@ -9,7 +9,7 @@ publishDir            = "docs"					# 站点静态文件保存目录
 
 
 [params]
-    author        = "ikirito"
+    author        = "AiEDU"
     description   = "AiEDU | MJJ导航"
     upload        = "#"  # 左侧导航栏的"网站提交"
     about         = "https://github.com/88899"	# 左侧导航栏的"关于导航"页面(./about)
