--- a/config.toml
+++ b/config.toml
@@ -23,10 +23,11 @@ publishDir            = "docs"					# 站点静态文件保存目录
     yiyan         = false                         		# 默认启用一言服务
 
 [params.seo]
-    baiduhmid     = '252f9700e4c1ad32c2647eb839ef71e6'		# 百度统计 hm.src 的 ID
-    baiduSiteVer  = 'codeva-cCAOSG8MBO'				# 百度HTML标签验证(baidu-site-verification)
-    tj51laid        = ''                        		# 51.LA 网站统计
-    tj51lack        = ''
+    # baiduhmid     = '252f9700e4c1ad32c2647eb839ef71e6'		# 百度统计 hm.src 的 ID
+    # baiduSiteVer  = 'codeva-cCAOSG8MBO'				# 百度HTML标签验证(baidu-site-verification)
+    # tj51laid        = ''                        		# 51.LA 网站统计
+    # tj51lack        = ''
+    GoogleAdsClient = 'G-Z57E0L2R8Z'
 
 [params.qweather]
     key = ""
