--- a/themes/WebStack-Hugo/exampleSite/data/headers.yml
+++ b/themes/WebStack-Hugo/exampleSite/data/headers.yml
@@ -2,9 +2,9 @@
   icon: fa fa-home
   link: "./"
 
-- item: 作者
+- item: 文档
   icon: fa fa-book
-  link: https://www.yuque.com/shenweiyan
+  link: https://www.aiedu.pp.ua
 
 - item: 配置
   icon: fa fa-cog
