--- a/data/friendlinks.yml
+++ b/data/friendlinks.yml
@@ -1,6 +1,6 @@
-- title: AiEDU
-  url: https://518855.xyz/
-  description: 网址导航
-- title: 个人博客
+- title: 博客
   url: https://googhub.nyc.mn/
-  description: 个人博客
+  description: 博客
+- title: 文档
+  url: https://aiedu.pp.ua
+  description: 文档库，API库
