--- a/themes/WebStack-Hugo/exampleSite/data/friendlinks.yml
+++ b/themes/WebStack-Hugo/exampleSite/data/friendlinks.yml
@@ -1,6 +1,6 @@
-- title: BioIT爱好者
-  url: https://bioitee.com/
-  description: Bio & IT 网址导航
-- title: 个人博客
-  url: https://shen.bioitee.com/
-  description: 个人博客
+- title: 博客
+  url: https://googhub.nyc.mn/
+  description: 博客
+- title: 文档
+  url: https://aiedu.pp.ua
+  description: 文档库，API库
